# shelly-speedwire-gateway

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  gateway_speedwire.py  pyproject.toml  requirements.txt  setup.py  shelly-speedwire-gateway.service  shelly_speedwire_gateway.py  shelly_speedwire_gateway_config.yaml
.devcontainer/: devcontainer.json
scripts/: run_gateway.py
shelly_speedwire_gateway/: __init__.py  async_mqtt_client.py  config.py  constants.py  exceptions.py  fast_calc.pyx  gateway.py  main.py  metrics.py  models.py  models.py,cover  mqtt_processor.py  power_calculator.py  speedwire.py
tests/: test_async_mqtt_client.py  test_config.py  test_exceptions.py  test_gateway.py  test_main.py  test_metrics.py  test_models.py  test_mqtt_processor.py  test_power_calculator.py  test_speedwire.py
